welcome.lessons.welcome.array.has271.Has271.scala.error
has271:13: error: not found: value k
		if(nums(k)==2 && nums(k+1)==7 && nums(k+2)==3){
                        ^